style: remove spacing between pre blocks and fix keyword colours

--- a/assets/highlight.css
+++ b/assets/highlight.css
@@ -27,7 +27,7 @@ pre {
 }
 
 .hl-type {
-	color: #a67578;
+	color: #84a675;
 }
 
 .hl-generic {
